--- a/level 08/claswork/uujjujj.html
+++ b/level 08/claswork/uujjujj.html
@@ -4,7 +4,7 @@
 
 <i>lol</i>    <!_ _ტექსტს ხრის_ _!>  <br>
 
-<u>lol</u>   <!_ _ქვემოდ უსმევს ხასზ_ _!>  <br>
+<u>lol</u>   <!--ქვემოდ უსმევს ხასზ-->  <br>
 
 <strong>lol</strong>   <!_ _ამუქებს ტექსტს_ _!>      <br>
 
