--- a/level 06/homework/hhhhhhhhh.html
+++ b/level 06/homework/hhhhhhhhh.html
@@ -1,26 +1,13 @@
+<!-- 1) შექმენი ორი ბმული <a> თეგით   -->
+
+
+<!-- 2) ერთს მისდიე youtube.com, მეორეს wikipedia.org   -->
 
 
 
 
-<!DOCTYPE html>
-<html lang="ka">
-<head>
-    <meta charset="UTF-8">
-    <title>ჩემი პირველი ბმული</title>
-</head>
-<body>
-
-    <!-- ეს არის ბმული (ლინკი), რომელიც გადაგიყვანთ სასურველ საიტზე -->
-    <!-- target="_blank" ნიშნავს, რომ ბმული გაიხსნება ახალ ფანჯარაში ან ჩანართში -->
-    <a href="https://www.example.com" target="_blank">ეწვიე ჩემს საყვარელ საიტს</a>
-
-</body>
-</html>
-
-
-
-
-
-
-
-
+<!-- 3) დაწერე ტექსტები: "იუთუბი" და "ვიკიპედია"   -->
+<!-- 4) ორივე გახსნე ახალ ტაბში -->
+<!-- 5) კომნეტარებით ახსენით რა არის single-page და multi-page საიტები, წარმატებები <3 -->
+<a href="wikipedia.org" target="_blank">wikipedia</a>
+<a href="https://www.google.com/search?gs_ssp=eJzj4tTP1TewzEouKzZg9GKvzC8tKU1KBQA_-AaN&q=youtube&oq=&gs_lcrp=EgZjaHJvbWUqCQgBEC4YJxjqAjIJCAAQIxgnGOoCMgkIARAuGCcY6gIyCQgCECMYJxjqAjIJCAMQIxgnGOoCMgkIBBAuGCcY6gIyCQgFECMYJxjqAjIJCAYQLhgnGOoCMgkIBxAjGCcY6gLSAQkxMDMxajBqMTWoAgiwAgHxBb39T5Twi8wB&sourceid=chrome&ie=UTF-8" target="_blank">youtube</a>
