--- a/level 08/claswork/uujjujj.html
+++ b/level 08/claswork/uujjujj.html
@@ -6,7 +6,7 @@
 
 <u>lol</u>   <!--ქვემოდ უსმევს ხასზ-->  <br>
 
-<strong>lol</strong>   <!_ _ამუქებს ტექსტს_ _!>      <br>
+<strong>lol</strong>   <!--ამუქებს ტექსტს-->      <br>
 
 <em>lol</em>        <!_ _ტექს ხრის_ _!>    <br>
 
