--- a/grup work/grup work.html
+++ b/grup work/grup work.html
@@ -58,19 +58,10 @@
     <a href="https://www.youtube.com" target="_blank">YouTube</a>
     <a href="https://www.instagram.com" target="_blank">Instagram</a>
 
-
   </div>
 </body>
 </html
-h1>GOA<h1
+h1>GOA<h1>
+<a href="work.html">go to the nekst page</a>
 
-
-h3>გოა ხალიან მაგარი პროგრამირების აკადემიაა</h3>
-
-
-<h4>გოა გპირდები შენ სიცოცხლეს შეცვლის ძაან</h4>
-
-
-<h1>მადლობა თქვენი ყურადღებისთვის</h1>
-
-<h5>ნახვამდის</h5>
+<img src="https://scontent.ftbs10-1.fna.fbcdn.net/v/t39.30808-6/408864179_342479481868687_2724919989645877908_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=pKRTwnPNFIsQ7kNvwHmM93b&_nc_oc=AdnjuuvNPMF2Iiw9ZAAgrzqj17GHPihneF1CXkTGZ68DkAQLjFkdbjU1sOHfg2o0JhU&_nc_zt=23&_nc_ht=scontent.ftbs10-1.fna&_nc_gid=fh1MDDGvNu8V46v8aSxGLQ&oh=00_AfUvwdiydPhoNqVvgS-YYcFwlotRTDkZ_gCZpe0GBPOu7g&oe=68AD0B53" alt="">
